@@ -12,6 +12,7 @@ boinc (7.0.31+dfsg-1) UNRELEASED; urgency=low
   * debian/rules:
     - use dh_python2 instead of py_support.
     - remove build-stamp, use override_dh_auto_build to build samples.
+    - simplify targets by using pattern rule.
 
  -- Guo Yixuan <culu.gyx@gmail.com>  Tue, 10 Jul 2012 23:21:13 +0800
 
